--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,16 @@ Navbar stuff
 
 .topnav .mobile-nav-icon {
     display: none;
-    color: #f2f2f2;
+    color: ivory;
     background-color: var(--ocean1);
     border: none;
     outline: 0;
     height: 8.5vh;
+    text-align: center;
+    padding: 0 3vh;
 }
 
-.topnav .nav-button {
+.topnav .nav-item {
     text-decoration: none;
     margin-top: 0;
     /* margin-left: 2vw;
@@ -45,7 +47,6 @@ Navbar stuff
     padding: 21.5px 2.5vw;
     font-size: 14px;
     color: ivory;
-    align-items: center;
     letter-spacing: .5vh;
 }
 
