fixed old grade button expanding the row

--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ Navbar stuff
 }
 .grade-form2 {
     background: rgb(199, 173, 107, .8);
-    width: 4.5vw;
+    width: 60%;
     margin-top: 2.5vh;
     border: 2px solid rounded;
     border-color: ivory;
