--- a/css/style.css
+++ b/css/style.css
@@ -485,28 +485,29 @@ that have a width less or equal than 500px*/
     }
 
     ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        font-size: 16px;
+        font-size: 12px;
     }
     ::-moz-placeholder { /* Firefox 19+ */
-        font-size: 16px;
+        font-size: 12px;
     }
     :-ms-input-placeholder { /* IE 10+ */
-        font-size: 16px;
+        font-size: 12px;
     }
     :-moz-placeholder { /* Firefox 18- */
-        font-size: 16px;
+        font-size: 12px;
     }
 
     .input-form {
-        font-size: 16px;
+        font-size: 12px;
     }
     
     .input-form2 {
-        font-size: 16px;
+        font-size: 12px;
     }
 
     .grade-form2 {
-        font-size: 16px;
+        font-size: 12px;
+        width: 75%;
     }
     
 }
