slight instructions style changes

--- a/css/style.css
+++ b/css/style.css
@@ -177,12 +177,12 @@ Navbar stuff
     margin-top: 2vh;
     margin-left: 1vw;
     margin-bottom: 1vh;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: rgb(212, 187, 122);
 }
 
 .sub-text {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 1vh;
     margin-right: 2vw;
     line-height: 1.25em;
@@ -211,7 +211,7 @@ Navbar stuff
 }
 
 .about-header {
-    font-size: 17px;
+    font-size: 15px;
     font-style: italic;
     margin-bottom: 1vh;
     margin-right: 2vw;
@@ -221,7 +221,7 @@ Navbar stuff
 }
 
 .about-text {
-    font-size: 15px;
+    font-size: 13px;
     margin-bottom: 3.5vh;
     margin-right: 2vw;
     line-height: 1.25em;
@@ -230,7 +230,7 @@ Navbar stuff
 }
 
 .disclaimer-header {
-    font-size: 12.5px;
+    font-size: 10px;
     font-style: italic;
     margin-right: 2vw;
     line-height: 1.25em;
@@ -238,12 +238,12 @@ Navbar stuff
     margin-bottom: 1vh;
     color: rgb(212, 187, 122);
     letter-spacing: .35vw;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     
 }
 
 .disclaimer-text {
-    font-size: 12px;
+    font-size: 8px;
     margin-bottom: 1.5vh;
     margin-right: 2vw;
     line-height: 1.25em;
@@ -334,7 +334,7 @@ table {
 
 .th-class {
     font-size: 1em;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .retakeCell {
