--- a/css/style.css
+++ b/css/style.css
@@ -497,16 +497,29 @@ that have a width less or equal than 500px*/
         margin-bottom: 20px;
     }
 
-    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    .input-form::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         font-size: 12px;
     }
-    ::-moz-placeholder { /* Firefox 19+ */
+    .input-form::-moz-placeholder { /* Firefox 19+ */
         font-size: 12px;
     }
-    :-ms-input-placeholder { /* IE 10+ */
+    .input-form:-ms-input-placeholder { /* IE 10+ */
         font-size: 12px;
     }
-    :-moz-placeholder { /* Firefox 18- */
+    .input-form:-moz-placeholder { /* Firefox 18- */
+        font-size: 12px;
+    }
+
+    .grade-form2::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        font-size: 12px;
+    }
+    .grade-form2::-moz-placeholder { /* Firefox 19+ */
+        font-size: 12px;
+    }
+    .grade-form2:-ms-input-placeholder { /* IE 10+ */
+        font-size: 12px;
+    }
+    .grade-form2:-moz-placeholder { /* Firefox 18- */
         font-size: 12px;
     }
 
