--- a/css/style.css
+++ b/css/style.css
@@ -497,31 +497,19 @@ that have a width less or equal than 500px*/
         margin-bottom: 20px;
     }
 
-    .input-form::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         font-size: 12px;
     }
-    .input-form::-moz-placeholder { /* Firefox 19+ */
+    ::-moz-placeholder { /* Firefox 19+ */
         font-size: 12px;
     }
-    .input-form:-ms-input-placeholder { /* IE 10+ */
+    :-ms-input-placeholder { /* IE 10+ */
         font-size: 12px;
     }
-    .input-form:-moz-placeholder { /* Firefox 18- */
+    :-moz-placeholder { /* Firefox 18- */
         font-size: 12px;
     }
 
-    .grade-form2::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        font-size: 12px;
-    }
-    .grade-form2::-moz-placeholder { /* Firefox 19+ */
-        font-size: 12px;
-    }
-    .grade-form2:-ms-input-placeholder { /* IE 10+ */
-        font-size: 12px;
-    }
-    .grade-form2:-moz-placeholder { /* Firefox 18- */
-        font-size: 12px;
-    }
 
     .input-form {
         font-size: 12px;
