removed all placeholder styling

--- a/css/style.css
+++ b/css/style.css
@@ -323,11 +323,11 @@ Navbar stuff
 }
 
 
-/* Placeholder Styling */
+/* Placeholder Styling
 ::placeholder {
     color: black;
     opacity: 0.5;
-}
+} */
 
 
 label {
