--- a/css/style.css
+++ b/css/style.css
@@ -323,11 +323,12 @@ Navbar stuff
 }
 
 
-/* Placeholder Styling
+/* Placeholder Styling */
 ::placeholder {
     color: black;
     opacity: 0.5;
-} */
+    font-size: 30px;
+}
 
 
 label {
