--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,6 @@ Navbar stuff
 ::placeholder {
     color: black;
     opacity: 0.5;
-    font-size: 30px;
 }
 
 
@@ -496,6 +495,19 @@ that have a width less or equal than 500px*/
 
     .disclaimer-text {
         margin-bottom: 20px;
+    }
+
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        font-size: 16px;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+        font-size: 16px;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+        font-size: 16px;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+        font-size: 16px;
     }
 
 
