--- a/css/style.css
+++ b/css/style.css
@@ -499,26 +499,12 @@ that have a width less or equal than 500px*/
         margin-bottom: 20px;
     }
 
-    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    ::placeholder { /* Chrome/Opera/Safari */
         font-size: 12px;
         transform: scale(0.45);
         transform-origin: 0% 50%;
     }
-    ::-moz-placeholder { /* Firefox 19+ */
-        font-size: 12px;
-        transform: scale(0.45);
-        transform-origin: 0% 50%;
-    }
-    :-ms-input-placeholder { /* IE 10+ */
-        font-size: 12px;
-        transform: scale(0.45);
-        transform-origin: 0% 50%;
-    }
-    :-moz-placeholder { /* Firefox 18- */
-        font-size: 12px;
-        transform: scale(0.45);
-        transform-origin: 0% 50%;
-    }
+
 
 
     .input-form {
