--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ Navbar stuff
 .flex-container {
     display: flex;
     min-height: 100%;
+    height: 100vh;
     flex-direction: column;
 }
 
@@ -127,10 +128,12 @@ Navbar stuff
     /* position: absolute; */
     /* display: flex; */
     min-height: 100%;
+    max-height: 100%;
     background: var(--ocean2);
     flex: 1;
     align-items: center;
     overflow-x: hidden;
+
 }
 
 .input-wrap {
@@ -211,25 +214,6 @@ Navbar stuff
     border-color: var(--pearl);
     /* padding: 0 1.5vh; */
 
-}
-
-.about-header {
-    font-size: 14px;
-    font-style: italic;
-    margin-bottom: 1vh;
-    margin-right: 2vw;
-    line-height: 1.25em;
-    margin-left: 1vw;
-    color: rgb(212, 187, 122);
-}
-
-.about-text {
-    font-size: 11px;
-    margin-bottom: 3.5vh;
-    margin-right: 2vw;
-    line-height: 1.25em;
-    margin-left: 1vw;
-    color: var(--pearl);
 }
 
 .disclaimer-header {
@@ -439,6 +423,29 @@ button {
 */
 #classGradeCalc-container {
     display: none;
+}
+
+#about-container {
+    display: none;
+}
+
+.about-text-header {
+    margin-top: 5vh;
+    font-size: 3em;
+}
+
+
+.about-text {
+    margin-top: 5vh;
+    font-size: 1em;
+}
+
+
+.grade {
+    font-size: 20px;
+    margin-top: 3.5vh;
+    margin-bottom: 2.5vh;
+    margin-left: 1.5vw;
 }
 
 /*change the layout of the navigation bar for all the screens 
