--- a/css/style.css
+++ b/css/style.css
@@ -500,9 +500,9 @@ that have a width less or equal than 500px*/
     }
 
     ::placeholder { /* Chrome/Opera/Safari */
-        /* font-size: 12px; */
-        transform: scale(0.45);
-        transform-origin: 0% 100%;
+        font-size: 16px;
+        /* transform: scale(0.45);
+        transform-origin: 0% 100%; */
     }
 
 
