--- a/css/style.css
+++ b/css/style.css
@@ -497,8 +497,8 @@ that have a width less or equal than 500px*/
         margin-bottom: 20px;
     }
 
-    ::placeholder { /* Chrome/Opera/Safari */
-        /* font-size: 30px; */
+    .input-form2::placeholder { /* Chrome/Opera/Safari */
+        font-size: 12px;
         /* transform: scale(0.45);
         transform-origin: 0% 100%; */
     }
