--- a/css/style.css
+++ b/css/style.css
@@ -300,8 +300,9 @@ Navbar stuff
     display: block;
     line-height: 1;
     width: 100%;
+    min-height: 50vh;
+    max-height: 100%;
     padding: 0 .5vw;
-    height: 100%;
     color: ivory;
     margin-left: 2%;
 }
@@ -431,13 +432,17 @@ button {
 
 .about-text-header {
     margin-top: 5vh;
-    font-size: 3em;
+    font-size: 2em;
+    font-style: italic;
+    text-align: center;
 }
 
 
 .about-text {
     margin-top: 5vh;
     font-size: 1em;
+    line-height: 25px;
+    width: 95%;
 }
 
 
