--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ Navbar stuff
     /* display: flex; */
     
     flex: 10;
+    overflow-y: hidden;
     /* width: 100%; */
     /* height: 100%; */
     /* align-items: stretch; */
@@ -284,6 +285,10 @@ Navbar stuff
     height: 30px;
 }
 
+#classGradeCalc-container .input-form2 {
+    height: 35px;
+}
+
 
 /* #th {
     display: none;
@@ -339,6 +344,15 @@ table {
     width: 100%;
     margin-top: 3vh;
 }
+
+#classGradeForm-table {
+    table-layout: fixed;
+    width: 30vw;
+}
+
+/* #classGradeForm-table th, td  {
+    width: 10vw;
+} */
 
 .th-class {
     font-size: 1em;
@@ -400,32 +414,18 @@ button {
     margin-left: 0;
 }
 
-/* No matching HTML element
-   Left in here in case we go back to an output box view
-*/
-/* .output-box-view {
-    font-size: 1em;
-    color: var(--pearl);
-    margin-top: 3vh;
-    background-color: #131831;
-    border: 1px solid;
-    border-color: ivory;
-    width: 92%;
-    display: block;
-} */
-
 #out {
     padding: 2.5vh 0vh;
 }
 
-#submit-btn {
+/* .submit-btn {
     margin-top: 5vh;
-}
+} */
 
-#addRow-btn {
+.form-btn {
     margin-right: 0vw;
-    margin-top: 5vh;
-
+    margin-top: 4vh;
+    margin-bottom: 2vw;
 }
 
 .flex-container::-webkit-scrollbar {
@@ -439,6 +439,10 @@ button {
 */
 #classGradeCalc-container {
     display: none;
+}
+
+#classGradeDisclaimer {
+    margin-top: 3.5vh;
 }
 
 /*change the layout of the navigation bar for all the screens 
@@ -526,6 +530,7 @@ that have a width less or equal than 500px*/
     .page-wrap {
         display: flex;
         flex-direction: column;
+        overflow-x: hidden;
     }
 
     body {
@@ -538,7 +543,13 @@ that have a width less or equal than 500px*/
     .retakeCell {
         width: 13.5%;
     }
-    
+
+    /*
+    * Class Grade Page
+    */
+    #classGradeForm-table {
+        width: 50vw;
+    }
 }
 
 @media screen and (min-width: 700px) {
