potential fix to placeholders

--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ Navbar stuff
 } */
 .input-box {
     display: block;
-    line-height: 1;
+    /* line-height: 1; */
     width: 100%;
     min-height: 50vh;
     max-height: 100%;
