changed font size and line height

--- a/css/style.css
+++ b/css/style.css
@@ -461,8 +461,8 @@ button {
     } */
 
     .input-form {
-        /* font-size: 12px; */
-        line-height: 30px;
+        font-size: 12px;
+        /* line-height: 30px; */
     }
     
     .input-form2 {
