flex shrink fix and double counting fix

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ Navbar stuff
     max-height: 100%;
     background: var(--ocean2);
     flex: 1;
+    min-width: 25vw;
     align-items: center;
     overflow-x: hidden;
 
