tooltip color change

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
     --ocean2: #1d1f2b;
     --ocean3: #36384b;
 
-    --helptip: #626899;
+    --helptip: #14183d;
+    --helptip2: #626899;
     height: 100vh;
 }
 
